# SCPRO

./: CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: REFACTOR_NOTES.md
examples/: scpro_hi_minimal.py  scpro_vi_minimal.py
src/scpro/: __init__.py  _compat.py  _utils.py  io.py
src/scpro/hi/: __init__.py  _api.py  _data.py  _features.py  _matching.py  _model.py  _pipeline.py
src/scpro/vi/: __init__.py  _api.py  _graphs.py  _models.py  _schema.py  _train.py
tests/: test_feature_selection.py  test_import.py  test_vi_graph_math.py
