[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "scpro"
version = "0.1.0"
description = "SCPRO-HI and SCPRO-VI integration methods for single-cell proteomic and multimodal data."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Mehmet Burak Koca"}
]
keywords = ["single-cell", "proteomics", "multi-omics", "integration", "AnnData", "MuData"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
  "scikit-learn>=1.2",
  "networkx>=2.8"
]

[project.optional-dependencies]
hi = [
  "anndata>=0.9",
  "scanpy>=1.9",
  "umap-learn>=0.5",
  "tensorflow>=2.12"
]
vi = [
  "anndata>=0.9",
  "mudata>=0.2",
  "scanpy>=1.9",
  "torch>=2.0",
  "torch-geometric>=2.3"
]
gpu = [
  "cupy-cuda12x>=12.0"
]
plot = [
  "matplotlib>=3.7"
]
all = [
  "anndata>=0.9",
  "mudata>=0.2",
  "scanpy>=1.9",
  "umap-learn>=0.5",
  "tensorflow>=2.12",
  "torch>=2.0",
  "torch-geometric>=2.3",
  "matplotlib>=3.7"
]
dev = [
  "pytest>=8",
  "ruff>=0.5"
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/scpro"
Issues = "https://github.com/YOUR_USERNAME/scpro/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scpro"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
